# fastik

./: Makefile  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
migrations/: env.py
migrations/versions/: b6ab117d4251_create_user_table.py
tests/: conftest.py  test_handlers.py
