[tool.poetry]
name = "xxx"
version = "0.1.0"
description = "test poetr fastik sql alemb itd itp"
authors = ["YAAAA"]
license = "1321313123"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"
pydantic = {extras = ["email"], version = "^2.6.0"}
envparse = "^0.2.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pytest = "7.2"
pytest-asyncio = "^0.23.4"
httpx = "^0.26.0"
pre-commit = "3.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.7"
bcrypt = "^4.1.2"
greenlet = "^3.0.3"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
starlette-exporter = "^0.19.0"
pydantic-settings = "^2.1.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"